<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.leon.opencv4android.imagemanipulations.MainActivity">
    <item
        android:id="@+id/action_rgba"
        android:orderInCategory="100"
        android:title="@string/action_rgba"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_histograms"
        android:orderInCategory="100"
        android:title="@string/action_histograms"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_canny"
        android:orderInCategory="100"
        android:title="@string/action_canny"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sepia"
        android:orderInCategory="100"
        android:title="@string/action_sepia"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sobel"
        android:orderInCategory="100"
        android:title="@string/action_sobel"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_zoom"
        android:orderInCategory="100"
        android:title="@string/action_zoom"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_pixelize"
        android:orderInCategory="100"
        android:title="@string/action_pixelize"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_posterize"
        android:orderInCategory="100"
        android:title="@string/action_posterize"
        app:showAsAction="never"/>
</menu>
